...
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileImageMotionButton">

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/edit_profile_hint_enter_your_name"
                android:inputType="textPersonName"
                android:text=""
...
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider"
                    android:gravity="center" />

                <EditText
                    android:id="@+id/phoneNumberEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/divider"
                    android:layout_marginTop="20dp"
                    android:autofillHints="phone"
                    android:drawablePadding="15dp"
...
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:drawableLeftCompat="@drawable/ic_baseline_call_24"
                    app:drawableTint="#000000"
                    tools:ignore="RtlCompat" />

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phoneNumberEditText"
                    android:layout_marginTop="20dp"
                    android:autofillHints="emailAddress"
                    android:drawablePadding="15dp"
...

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/saveChangeButton"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:background="@drawable/login_button"
            android:text="@string/edit_profile_button_save_changes"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
...
