...
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileImageMotionButton">

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />
...
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="?android:attr/listDivider"
                        android:gravity="center" />

                    <TextView
                        android:id="@+id/phoneNumberTextView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/divider"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="15dp"
                        android:gravity="center"
...
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        app:drawableLeftCompat="@drawable/ic_baseline_call_24"
                        app:drawableTint="#000000"
                        tools:ignore="RtlCompat" />

                    <TextView
                        android:id="@+id/emailTextView"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/phoneNumberTextView"
                        android:layout_marginTop="20dp"
                        android:drawablePadding="15dp"
                        android:gravity="center"
...
                android:layout_marginVertical="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                android:gravity="center">

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/editProfileButton"
                    android:layout_width="149dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button"
                    android:text="@string/profile_button_edit_profile"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white"
...
