<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Claims">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backgroundImageView2"
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/profile_background"
            android:rotationX="180"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            app:cardBackgroundColor="#F2F2F2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_centerInParent="true"
            app:layout_constraintVertical_bias="0.06">

            <RelativeLayout
                android:id="@+id/claimsRelativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="35dp"
                app:layout_constraintTop_toBottomOf="@+id/namePositionLinearLayout">

                <TextView
                    android:id="@+id/headingEmployeeClaimsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:text="Staff Actions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/headingEmployeeClaimsDivider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/headingEmployeeClaimsTextView"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:background="?android:attr/listDivider"
                    android:gravity="center" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/employeeCreateNewClaimButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_button_color"
                    android:gravity="center"
                    android:text="New Claims"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="6dp"
                    app:spinning_bar_width="4dp" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/employeeViewApprovedRejectedClaimButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="150dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_button_color"
                    android:gravity="center"
                    android:text="Claims Outcome"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="20dp"
                    app:spinning_bar_width="4dp" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/employeeViewPendingClaimButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="240dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_button_color"
                    android:gravity="center"
                    android:text="Pending Claims"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="20dp"
                    app:spinning_bar_width="4dp" />

                <TextView
                    android:id="@+id/headingManagerClaimsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="330dp"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:text="Manager Actions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/headingManagerClaimsDivider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/headingEmployeeClaimsTextView"
                    android:layout_gravity="center"
                    android:layout_marginTop="330dp"
                    android:background="?android:attr/listDivider"
                    android:gravity="center" />

                <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                    android:id="@+id/managerManageAllClaimButton"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="380dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/ic_button_color"
                    android:gravity="center"
                    android:text="Manage Claims"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    app:initialCornerAngle="27dp"
                    app:spinning_bar_color="#FFF"
                    app:spinning_bar_padding="20dp"
                    app:spinning_bar_width="4dp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


    </RelativeLayout>

</FrameLayout>